--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.971d7d84.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.59325d81.js">
-    <link rel="stylesheet" href="/assets/vendor.4d34a850.css">
-    <link rel="stylesheet" href="/assets/index.133534c8.css">
+    <script type="module" crossorigin src="https://armin926.github.io/m-element-components-web/assets/index.971d7d84.js"></script>
+    <link rel="modulepreload" href="https://armin926.github.io/m-element-components-web/assets/vendor.59325d81.js">
+    <link rel="stylesheet" href="https://armin926.github.io/m-element-components-web/assets/vendor.4d34a850.css">
+    <link rel="stylesheet" href="https://armin926.github.io/m-element-components-web/assets/index.133534c8.css">
   </head>
   <body>
     <div id="app"></div>
